--- a/badges-test2.css
+++ b/badges-test2.css
@@ -21,8 +21,8 @@
     background-image: url("https://i.imgur.com/5iJJVk0.gif");
 }
 
-/* Harry-test */
-#user-rollover.id-37218461 .badge-box i.bdg,
-.id-37218461 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/5iJJVk0.gif");
+/* Raepix */
+#user-rollover.id-38539600 .badge-box i.bdg,
+.id-38539600 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/wGWw5km.png");
 }
