--- a/badges.css
+++ b/badges.css
@@ -24,5 +24,11 @@
 /* Raepix */
 #user-rollover.id-38539600 .badge-box i.bdg,
 .id-38539600 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/wGWw5km.png");
+    background-image: url("https://i.imgur.com/yFXGhnL.png");
+}
+
+/* MrDestructoid 7 */
+#user-rollover.id-39408073 .badge-box i.bdg,
+.id-39408073 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/VSTSFN2.png");
 }
