--- a/badges.css
+++ b/badges.css
@@ -27,6 +27,12 @@
     background-image: url("https://i.imgur.com/yFXGhnL.png");
 }
 
+/*Harry_McKenzie */
+#user-rollover.id-37218461 .badge-box i.bdg,
+.id-37218461 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/0unoP01.png");
+}
+
 /* MrDestructoid 7 */
 #user-rollover.id-39408073 .badge-box i.bdg,
 .id-39408073 .badge-box i.bdg {
