--- a/badges.css
+++ b/badges.css
@@ -42,5 +42,5 @@
 /* rustyimpac */
 #user-rollover.id-37840096 .badge-box i.bdg,
 .id-37840096 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/04lR9Rn.png");
+    background-image: url("https://i.imgur.com/4au59Nj.gif");
 }
