--- a/badges.css
+++ b/badges.css
@@ -12,7 +12,7 @@
 /* xQc */
 #user-rollover.id-37147238 .badge-box i.bdg,
 .id-37147238 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/Do6hVuQ.gif");
+    background-image: url("https://i.imgur.com/aP1PxKS.gif");
 }
 
 /* ejox */
