--- a/badges.css
+++ b/badges.css
@@ -12,7 +12,7 @@
 /* xQc */
 #user-rollover.id-37147238 .badge-box i.bdg,
 .id-37147238 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/aP1PxKS.gif");
+    background-image: url("https://i.imgur.com/uT9G9t0.gif");
 }
 
 /* ejox */
@@ -39,7 +39,7 @@
     background-image: url("https://i.imgur.com/VSTSFN2.png");
 }
 
-/* rustyimpac */
+/* rustyimpact */
 #user-rollover.id-37840096 .badge-box i.bdg,
 .id-37840096 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/IJiOlc3.gif");
