--- a/badges.css
+++ b/badges.css
@@ -33,7 +33,12 @@
     background-image: url("https://i.imgur.com/0unoP01.png");
 }
 
-/* MrDestructoid 7 */
+/*HandsomeWalnut*/
+#user-rollover.id-37218461 .badge-box i.bdg,
+.id-37633188 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/DgdsOnJ.png");
+
+/* Mr. Destructoid*/
 #user-rollover.id-39408073 .badge-box i.bdg,
 .id-39408073 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/VSTSFN2.png");
