--- a/badges.css
+++ b/badges.css
@@ -37,6 +37,7 @@
 #user-rollover.id-37633188 .badge-box i.bdg,
 .id-37633188 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/DgdsOnJ.png");
+}
 
 /* Mr. Destructoid */
 #user-rollover.id-39408073 .badge-box i.bdg,
