--- a/badges.css
+++ b/badges.css
@@ -36,7 +36,7 @@
 /* HandsomeWalnut */
 #user-rollover.id-37633188 .badge-box i.bdg,
 .id-37633188 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/DgdsOnJ.png");
+    background-image: url("https://i.imgur.com/rFyzbB0.png");
 }
 
 /* Mr. Destructoid */
