--- a/testmain.css
+++ b/testmain.css
@@ -134,10 +134,10 @@ div.message > div.msg > div.from > span.un {
 
 .message.role-manager,
 .emote.role-manager {
-    border-top: #69ddff 2px double;
-    border-left: #69ddff 2px double;
-    border-bottom: #69ddff 2px double;
-    border-right: #69ddff 2px double;
+    border-top: #69ddff 1px dotted;
+    border-left: #69ddff 1px dotted;
+    border-bottom: #69ddff 1px dotted;
+    border-right: #69ddff 1px dotted;
 }
 
 .message.role-cohost,
