--- a/testmain.css
+++ b/testmain.css
@@ -239,3 +239,55 @@ div.message > div.msg > div.from > span.un {
 .emote.role-user .msg .text::-moz-selection {
     color: #494949;
 }
+
+/* Custom */
+#user-rollover.id-3941421 .username:hover,
+#chat [data-cid^="3941421-"] span.un.clickable:hover {
+    animation: rainbow 10s infinite;
+}
+
+/* Chat Fade */
+@keyframes fadein
+{
+    from { opacity: 0; };
+    to { opacity: 1; };
+}
+
+@-moz-keyframes fadein
+{
+    from { opacity: 0; };
+    to { opacity: 1; };
+}
+
+@-webkit-keyframes fadein
+{
+    from { opacity: 0; };
+    to { opacity: 1; };
+}
+
+@-ms-keyframes fadein
+{
+    from { opacity: 0; };
+    to { opacity: 1; };
+}
+
+@-o-keyframes fadein
+{
+    from { opacity: 0; };
+    to { opacity: 1; };
+}
+
+/* Chat Custom */
+@keyframes rainbow {
+    0% { color: #ff0000; }
+    10% { color: #ff8000; }
+    20% { color: #ffff00; }
+    30% { color: #80ff00; }
+    40% { color: #00ff00; }
+    50% { color: #00ff80; }
+    60% { color: #00ffff; }
+    70% { color: #0080ff; }
+    80% { color: #0000ff; }
+    90% { color: #8000ff; }
+    100% { color: #ff0080; }
+}
