added welkerville's badge

--- a/badges.css
+++ b/badges.css
@@ -50,3 +50,9 @@
 .id-37840096 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/IJiOlc3.gif");
 }
+
+/* welkerville */
+#user-rollover.id-14846989 .badge-box i.bdg,
+.id-14846989 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/Z6dhe0r.png");
+}
