--- a/main.css
+++ b/main.css
@@ -319,15 +319,15 @@ div.message > div.msg > div.from > span.un {
 /* Fade to red */
 @keyframes fadedred {
     0% { color: #ff0000; }
-    10% { color: #ff3333; }
-    20% { color: #ff6666; }
-    30% { color: #ff9999; }
-    40% { color: #ffcccc; }
+    10% { color: #cc0000; }
+    20% { color: #990000; }
+    30% { color: #660000; }
+    40% { color: #330000; }
     50% { color: #000000; }
-    60% { color: #ffcccc; }
-    70% { color: #ff9999; }
-    80% { color: #ff6666; }
-    90% { color: #ff3333; }
+    60% { color: #330000; }
+    70% { color: #660000; }
+    80% { color: #990000; }
+    90% { color: #cc0000; }
     100% { color: #ff0000; }
 }
 
