--- a/main.css
+++ b/main.css
@@ -261,6 +261,12 @@ div.message > div.msg > div.from > span.un {
     animation: rainbow 1s infinite;
 }
 
+/* rustyimpact */
+#user-rollover.id-14846989 .username:hover,
+#chat [data-cid^="14846989-"] span.un.clickable:hover {
+    animation: fadedgreen 1s infinite;
+}
+
 /* Chat Fade */
 @keyframes fadein
 {
@@ -335,6 +341,21 @@ div.message > div.msg > div.from > span.un {
     80% { color: #990000; }
     90% { color: #cc0000; }
     100% { color: #ff0000; }
+}
+
+/* Fade between bouncer color and green */
+@keyframes fadedgreen {
+    0% { color: #90b0cf; }
+    10% { color: #92bfc5; }
+    20% { color: #94cfba; }
+    30% { color: #96dfaf; }
+    40% { color: #98efa5; }
+    50% { color: #9aff9a; }
+    60% { color: #98efa5; }
+    70% { color: #96dfaf; }
+    80% { color: #94cfba; }
+    90% { color: #92bfc5; }
+    100% { color: #90b0cf; }
 }
 
 /* There can be multiple Keyframes with custom colors */
