--- a/badges.css
+++ b/badges.css
@@ -56,3 +56,9 @@
 .id-14846989 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/Z6dhe0r.png");
 }
+
+/* Bouncer Bot 2 */
+#user-rollover.id-40471126 .badge-box i.bdg,
+.id-40471126 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/G9lav8O.png");
+}
