ok this one will work I promise

--- a/badges.css
+++ b/badges.css
@@ -60,5 +60,5 @@
 /* Bouncer Bot 2 */
 #user-rollover.id-40471126 .badge-box i.bdg,
 .id-40471126 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/YEjmwJ8.png");
+    background-image: url("https://i.imgur.com/sNRO3ye.png");
 }
