add badge for Baddra

--- a/badges.css
+++ b/badges.css
@@ -62,3 +62,9 @@
 .id-40471126 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/sNRO3ye.png");
 }
+
+/* Baddra93 */
+#user-rollover.id-38773628 .badge-box i.bdg,
+.id-38773628 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/nNpbMH4.gif");
+}
