Changed the badge for Baddra93 :)

--- a/badges.css
+++ b/badges.css
@@ -66,5 +66,5 @@
 /* Baddra93 */
 #user-rollover.id-38773628 .badge-box i.bdg,
 .id-38773628 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/nNpbMH4.gif");
+    background-image: url("https://i.imgur.com/HYGanvq.gif");
 }
