Added GIF badge for Fall :)

--- a/badges.css
+++ b/badges.css
@@ -68,3 +68,9 @@
 .id-38773628 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/HYGanvq.gif");
 }
+
+/* Fall_1965 */
+#user-rollover.id-39769462 .badge-box i.bdg,
+.id-39769462 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/XAGAy8Z.gif");
+}
