update fall's badge

--- a/badges.css
+++ b/badges.css
@@ -72,5 +72,5 @@
 /* Fall_1965 */
 #user-rollover.id-39769462 .badge-box i.bdg,
 .id-39769462 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/XAGAy8Z.gif");
+    background-image: url("https://i.imgur.com/FHGALs5.gif");
 }
