Updated Raepix' badge :)

--- a/badges.css
+++ b/badges.css
@@ -24,7 +24,7 @@
 /* Raepix */
 #user-rollover.id-38539600 .badge-box i.bdg,
 .id-38539600 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/yFXGhnL.png");
+    background-image: url("https://i.imgur.com/osMjMgg.gif");
 }
 
 /* Harry_McKenzie */
