Updated my badge

--- a/badges.css
+++ b/badges.css
@@ -16,9 +16,10 @@
 }
 
 /* ejox */
+/* OLD BADGE https://i.imgur.com/5iJJVk0.gif */
 #user-rollover.id-3941421 .badge-box i.bdg,
 .id-3941421 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/5iJJVk0.gif");
+    background-image: url("https://i.imgur.com/2VtKqNW.gif");
 }
 
 /* Raepix */
