--- a/MVP.css
+++ b/MVP.css
@@ -8,7 +8,7 @@
 /* ejox */
 #user-rollover.id-39238317 .info .role span:after {
     visibility: visible;
-    content: 'MVP 2018';
+    content: 'MVP';
 }
 
 /* MVP Icon */
