--- a/badges.css
+++ b/badges.css
@@ -75,3 +75,10 @@
 .id-39769462 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/FHGALs5.gif");
 }
+
+/* Cal */
+#user-rollover.id-6380999 .badge-box i.bdg,
+.id-39769462 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/kG6bPuu.png");
+}
+
