--- a/badges.css
+++ b/badges.css
@@ -49,7 +49,7 @@
 /* rustyimpact */
 #user-rollover.id-37840096 .badge-box i.bdg,
 .id-37840096 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/zqX4fmo.gif");
+    background-image: url("https://i.imgur.com/Tg7vR6k.gif");
 }
 
 /* welkerville */
