try this instead

--- a/main.css
+++ b/main.css
@@ -421,67 +421,58 @@ div.message > div.msg > div.from > span.un {
 }
 
 /* Poggy Woggy */
-@keyframes jello-horizontal {
+@-webkit-keyframes vibrate-1 {
   0% {
-            transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
+    -webkit-transform: translate(0);
+            transform: translate(0);
   }
-  30% {
-            transform: scale3d(1.25, 0.75, 1);
-            transform: scale3d(1.25, 0.75, 1);
+  20% {
+    -webkit-transform: translate(-2px, 2px);
+            transform: translate(-2px, 2px);
   }
   40% {
-            transform: scale3d(0.75, 1.25, 1);
-            transform: scale3d(0.75, 1.25, 1);
+    -webkit-transform: translate(-2px, -2px);
+            transform: translate(-2px, -2px);
   }
-  50% {
-            transform: scale3d(1.15, 0.85, 1);
-            transform: scale3d(1.15, 0.85, 1);
+  60% {
+    -webkit-transform: translate(2px, 2px);
+            transform: translate(2px, 2px);
   }
-  65% {
-            transform: scale3d(0.95, 1.05, 1);
-            transform: scale3d(0.95, 1.05, 1);
-  }
-  75% {
-            transform: scale3d(1.05, 0.95, 1);
-            transform: scale3d(1.05, 0.95, 1);
+  80% {
+    -webkit-transform: translate(2px, -2px);
+            transform: translate(2px, -2px);
   }
   100% {
-            transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
+    -webkit-transform: translate(0);
+            transform: translate(0);
   }
 }
-@keyframes jello-horizontal {
+@keyframes vibrate-1 {
   0% {
-            transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
+    -webkit-transform: translate(0);
+            transform: translate(0);
   }
-  30% {
-            transform: scale3d(1.25, 0.75, 1);
-            transform: scale3d(1.25, 0.75, 1);
+  20% {
+    -webkit-transform: translate(-2px, 2px);
+            transform: translate(-2px, 2px);
   }
   40% {
-            transform: scale3d(0.75, 1.25, 1);
-            transform: scale3d(0.75, 1.25, 1);
+    -webkit-transform: translate(-2px, -2px);
+            transform: translate(-2px, -2px);
   }
-  50% {
-            transform: scale3d(1.15, 0.85, 1);
-            transform: scale3d(1.15, 0.85, 1);
+  60% {
+    -webkit-transform: translate(2px, 2px);
+            transform: translate(2px, 2px);
   }
-  65% {
-            transform: scale3d(0.95, 1.05, 1);
-            transform: scale3d(0.95, 1.05, 1);
-  }
-  75% {
-            transform: scale3d(1.05, 0.95, 1);
-            transform: scale3d(1.05, 0.95, 1);
+  80% {
+    -webkit-transform: translate(2px, -2px);
+            transform: translate(2px, -2px);
   }
   100% {
-            transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
+    -webkit-transform: translate(0);
+            transform: translate(0);
   }
 }
-
 
 
 /* There can be multiple Keyframes with custom colors */
