Updated Welker's badge

--- a/badges.css
+++ b/badges.css
@@ -55,7 +55,7 @@
 /* welkerville */
 #user-rollover.id-14846989 .badge-box i.bdg,
 .id-14846989 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/8Mi6JGV.gif");
+    background-image: url("https://i.imgur.com/4CBQZyY.gif");
 }
 
 /* Bouncer Bot 2 */
