updated Raepix' badge

--- a/badges.css
+++ b/badges.css
@@ -25,7 +25,7 @@
 /* Raepix */
 #user-rollover.id-38539600 .badge-box i.bdg,
 .id-38539600 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/osMjMgg.gif");
+    background-image: url("https://i.imgur.com/twAgcv1.png");
 }
 
 /* Harry_McKenzie */
