added moistsalt badge

--- a/badges.css
+++ b/badges.css
@@ -82,3 +82,9 @@
     background-image: url("https://i.imgur.com/kG6bPuu.png");
 }
 
+/* MoistSalt */
+#user-rollover.id-37224716 .badge-box i.bdg,
+.id-37224716 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/vyR4F49.gif");
+}
+
