--- a/badges.css
+++ b/badges.css
@@ -16,10 +16,9 @@
 }
 
 /* ejox */
-/* OLD BADGE https://i.imgur.com/5iJJVk0.gif */
 #user-rollover.id-3941421 .badge-box i.bdg,
 .id-3941421 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/2VtKqNW.gif");
+    background-image: url("https://i.imgur.com/8bgZRpM.gif");
 }
 
 /* Raepix */
