--- a/badges.css
+++ b/badges.css
@@ -66,7 +66,7 @@
 /* Baddra93 */
 #user-rollover.id-38773628 .badge-box i.bdg,
 .id-38773628 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/HYGanvq.gif");
+    background-image: url("https://i.imgur.com/E60Sbjn.gif");
 }
 
 /* Fall_1965 */
