--- a/badges.css
+++ b/badges.css
@@ -72,7 +72,7 @@
 /* Fall_1965 */
 #user-rollover.id-39769462 .badge-box i.bdg,
 .id-39769462 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/FHGALs5.gif");
+    background-image: url("https://i.imgur.com/6TwBiV7.gif");
 }
 
 /* Cal */
