--- a/badges.css
+++ b/badges.css
@@ -48,7 +48,7 @@
 /* rustyimpact */
 #user-rollover.id-37840096 .badge-box i.bdg,
 .id-37840096 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/ChqoZnK.png");
+    background-image: url("https://i.imgur.com/QBwUnDb.png");
 }
 
 /* welkerville */
