--- a/badges.css
+++ b/badges.css
@@ -84,6 +84,6 @@
 /* MoistSalt */
 #user-rollover.id-37224716 .badge-box i.bdg,
 .id-37224716 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/I3A2hTS.gif");
+    background-image: url("https://i.imgur.com/kbN6Rmc.gif");
 }
 
