welkerville and Sly badges

--- a/badges.css
+++ b/badges.css
@@ -54,7 +54,7 @@
 /* welkerville */
 #user-rollover.id-14846989 .badge-box i.bdg,
 .id-14846989 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/8I4qngI.gif");
+    background-image: url("https://i.imgur.com/XMMcRaY.gif");
 }
 
 /* Bouncer Bot 2 */
@@ -85,5 +85,11 @@
 #user-rollover.id-37224716 .badge-box i.bdg,
 .id-37224716 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/kbN6Rmc.gif");
+}
+
+/* SlyVII */
+#user-rollover.id-11556348 .badge-box i.bdg,
+.id-11556348 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/MzZ6DFR.png");
 }
 
