Changed my badge :Smile:

--- a/badges.css
+++ b/badges.css
@@ -18,7 +18,7 @@
 /* ejox */
 #user-rollover.id-3941421 .badge-box i.bdg,
 .id-3941421 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/Byxi2Wf.gif");
+    background-image: url("https://i.imgur.com/3UICy4Y.gif");
 }
 
 /* Raepix */
