--- a/badges.css
+++ b/badges.css
@@ -24,7 +24,7 @@
 /* Raepix */
 #user-rollover.id-38539600 .badge-box i.bdg,
 .id-38539600 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/wfCmij1.jpg");
+    background-image: url("https://i.imgur.com/aP3zHYH.png");
 }
 
 /* Harry_McKenzie */
