--- a/badges.css
+++ b/badges.css
@@ -84,7 +84,7 @@
 /* MoistSalt */
 #user-rollover.id-37224716 .badge-box i.bdg,
 .id-37224716 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/VxH8PeL.gif");
+    background-image: url("https://i.imgur.com/x4mMGna.gif");
 }
 
 /* SlyVII */
