Updated Bouncer borders as most mods are bouncers
Previously Managers had 3px thick borders on both sides and Bouncers only had a 2px one on the right side. Now Bouncers have 3px borders on both sides as well. :)

--- a/main.css
+++ b/main.css
@@ -132,7 +132,8 @@ div.message > div.msg > div.from > span.un {
 
 .message.role-bouncer,
 .emote.role-bouncer {
-    border-right: #90b0cf 2px solid;
+    border-left: #90b0cf 3px solid;
+    border-right: #90b0cf 3px solid;
 }
 
 .message.role-manager,
