Added badge for Ageless

--- a/badges.css
+++ b/badges.css
@@ -93,3 +93,8 @@
     background-image: url("https://i.imgur.com/MzZ6DFR.png");
 }
 
+/* Ageless */
+#user-rollover.id-37174830 .badge-box i.bdg,
+.id-37174830 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/A0QfEQ9.png");
+}
