--- a/Test/main.css
+++ b/Test/main.css
@@ -1,3 +1,5 @@
+@import url("https://raw.githack.com/ejox/xQcJungle.github.io/master/Test/badges.css");
+
 /* main */
 /* Icon fix :before */
 div.message > div.msg > div.from > span.un {
@@ -148,7 +150,7 @@ div.message > div.msg > div.from > span.un {
 /* Moderation Inline */
 #chat .moderation {
     min-height: 0px !important;
-    background: rgba(62, 34, 34, 0.78) !important;
+    background: rgba(0, 0, 0, 0.0) !important;
 }
 
 .moderation .msg .text {
