--- a/Test/badges.css
+++ b/Test/badges.css
@@ -10,10 +10,16 @@
 }
 
 /* ejox */
+#chat-messages .id-3941421 .badge-box {
+    width: 30px;
+    height: 30px;
+    -webkit-transition: padding 5s;
+}
+
 #chat-messages .id-3941421 .badge-box:hover {
     width: 65px;
     height: 65px;
-    transition: 0.5s;
+    -webkit-transition: padding 5s;
 }
 
 #user-rollover.id-3941421 .badge-box i.bdg,
