--- a/Test/badges.css
+++ b/Test/badges.css
@@ -24,7 +24,7 @@
 
 #user-rollover.id-3941421 .badge-box i.bdg,
 #chat-messages .id-3941421 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/TTuZa8k.gif");
+    background-image: url("https://i.imgur.com/yMRzUbn.png");
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -35,9 +35,9 @@
 }
 
 .cm.id-3941421::before {
-    background-image: url("https://i.imgur.com/La3yxLC.png");
+    background-image: url("https://i.imgur.com/yMRzUbn.png");
     background-repeat: no-repeat;
-    content: "";
+    content: "test";
     position: absolute;
     top: 0;
     left: 0;
