--- a/Test/badges.css
+++ b/Test/badges.css
@@ -22,9 +22,10 @@
     transition: 0.5s;
 }
 
+/*User Badge*/
 #user-rollover.id-3941421 .badge-box i.bdg,
 #chat-messages .id-3941421 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/b4OyN8c.png");
+    background-image: url("https://i.imgur.com/TTuZa8k.gif");
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -33,7 +34,7 @@
     top: 0px;
     left: 0px;
 }
-
+/*User Background*/
 .cm.id-3941421::before {
     background-image: url("https://i.imgur.com/b4OyN8c.png");
     background-repeat: no-repeat;
@@ -43,6 +44,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.1;
+    opacity: 0.4;
     z-index: -1;
 }
